# win-open

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  main.rs  shell.rs
